--- a/website/docs/guides/miscellaneous/upgrade/v2.md
+++ b/website/docs/guides/miscellaneous/upgrade/v2.md
@@ -8,7 +8,7 @@ This guide shows how to upgrade a project using flutter_rust_bridge V1 to V2.
 This is just one approach, see below for more approaches.
 :::
 
-* Follow the [quickstart](../../quickstart) to integrate V2 boilerplate into the existing project (in a few commands). Usually, you just need to run `flutter_rust_bridge_codegen integrate`.
+* Follow the [quickstart](../../../quickstart) to integrate V2 boilerplate into the existing project (in a few commands). Usually, you just need to run `flutter_rust_bridge_codegen integrate`.
 * Move original Rust code (e.g. in `api.rs`) to `rust/src/api/simple.rs`. (You can also split into multiple files, e.g. `apple.rs`, `orange.rs`, etc.)
 * Run code generator and watch for code changes by running `flutter_rust_bridge_codegen generate --watch`.
 * Fix compilation errors (usually just a rename or relocation) and runtime exceptions (usually have hints).
