--- a/website/docs/guides/miscellaneous/upgrade/v2.md
+++ b/website/docs/guides/miscellaneous/upgrade/v2.md
@@ -37,6 +37,7 @@ just find the corresponding counterparts in V2 and rename things.
 * `flutter_rust_bridge_codegen` -> `flutter_rust_bridge_codegen generate`
 * `flutter_rust_bridge_serve` -> `flutter_rust_bridge_codegen build-web` + standard `flutter run` (or run in IDE)
 * `DartSafe` -> simply remove it
+* `StreamSink.close` -> simply remove it (it is auto closed when the object is dropped)
 
 Some flags are removed,
 when, for example, they exist mainly for compatibility of later V1 with earlier V1 versions.
